Add user input for city search

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 
+<div id="nav">
+	<input type="text" id="city-search">
+	<input type="button" id="get-weather" value="Get Weather">
+</div>
 	<script id="weather-template" type="text/x-handlebars-template">
 		<div>
 			<h1>{{date}}</h1>
